--- a/awardapp/templates/all_news/base.html
+++ b/awardapp/templates/all_news/base.html
@@ -19,7 +19,7 @@
 
 <body>
   {% include "navbar.html" %} {% block content %}
-  <h1 class='text-center'> Images </h1> {%endblock%}
+  <h1 class='text-center'> Award </h1> {%endblock%}
   {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
