--- a/awardapp/templates/profilemy.html
+++ b/awardapp/templates/profilemy.html
@@ -14,11 +14,7 @@
   <h3 class="account-heading ml-4">{{user.username}}</h3>
   <button class="btn btn-outline-primary"><a href="{% url 'profile_edit' %}">Edit Profile</a></button><a href="{% url 'homePage' %}" ><i class="fa fa-sun-o" style="font-size: 28px;color: black;"></i></a>
 </div>
-  <div class="bod" style="margin-left: 3px;justify-content: space-around;;">
-  <p ><strong>2 Post</strong></p>
-  <p ><strong>{{user|length}} Followers</strong></p>
-  <p ><strong>{{user|length}} Following</strong></p>
-  </div>
+  
   <p class="text-secondary ml-4">Email:{{user.email}}</p>
   <p class="text-secondary ml-4">Bio:{{user.profile.bio}}</p>
   </div>
@@ -31,6 +27,7 @@
     {% for user in pictures %}
     <div class="col-md-4" style="margin-right: 5%;">
       <img src="{{user.image.url}}" height="200" class="img-responsive">
+      <p>Project name:{{user.title}}</p>
     </div>
     {% endfor %}
   </div>
