--- a/awardapp/templates/index.html
+++ b/awardapp/templates/index.html
@@ -13,8 +13,8 @@
      
     </div>
     <div class="bt">
-        <button class="btn btn-success">visite site</button>
-        <button class="btn btn-primary">collect</button>
+        <button class="btn btn-outline-success">visite site</button>
+        <button class="btn btn-outline-primary">collect</button>
     </div>
     
 
