--- a/awardapp/templates/all_news/search.html
+++ b/awardapp/templates/all_news/search.html
@@ -5,7 +5,7 @@
 <div class="container">
 
   <div class="row">
-    {% if username %}
+    {% if users %}
       <h2>Found {{ username|length }} of searched term {{message}}</h2>
     {% else %}
       <h2> Found 0 users for the search term {{message}}</h2>
@@ -18,7 +18,7 @@
   {% if users %}
     {% for user in users %}
       <div class="col-sm-6 col-md-3">
-          <h1>{{user.user.username}}</h1>
+          <h1>{{user.title}}</h1>
       </div>
     {% endfor %}
   {% endif %}
