--- a/awardapp/templates/one_project.html
+++ b/awardapp/templates/one_project.html
@@ -9,7 +9,7 @@
             {% for images in projects %}
             <img src="{{images.image.url}}" width="100%" height="450vh">
             <p class="title">{{images.title}}</p>
-            
+          
             <div class="bt">
             <button class="btn btn-outline-success" style="border-radius:25px;"><a href="{{images.link}}" style="color: white;">visite site</a></button>
            
@@ -23,14 +23,14 @@
 <body>
     <div class="row design">
         
-        <div class="col-md-3">
+        <div class="col-md-3" >
                 <h3>Content </h3><hr class="bg-default"><br><h4>{{content}}</h4>
             </div><br>
-            <div class="col-md-3">
+            <div class="col-md-3"  >
                     <h3>Usability  </h3><hr class="bg-default"><br><h4>{{usability}}</h4>
             </div><br>
-            <div class="col-md-3">
-                    <h3>Design</h3><hr class="bg-default"><br><h4>{{design}}</h4>
+            <div class="col-md-3" >
+                    <h3>Design</h3><hr class="bg-default"><br><h4 style="color: white;">{{design}}</h4>
             </div>
             </div>
             
@@ -102,12 +102,16 @@
 </body>
 
 <style>
-        .d1{
+        #d1,#d2,#d3{
+                color: white;
         vertical-align: middle;
         width: 50px;
         height: 50px;
-        border-radius:50%;
-        background-color: black;    
+        border-radius:30%;
+        background-color: black;  
+        top:10%;
+        left:20%;
+        transform: translate(-50%,-50%);  
         }
     .header{
       position: relative;
