--- a/awardapp/templates/all_news/search.html
+++ b/awardapp/templates/all_news/search.html
@@ -4,26 +4,20 @@
 {% block content %}
 <div class="container">
 
-  <div class="row">
-    {% if users %}
-      <h2>Found {{ username|length }} of searched term {{message}}</h2>
-    {% else %}
-      <h2> Found 0 users for the search term {{message}}</h2>
-    {% endif %}
 
-  </div>
 
   <div class="row">
 
   {% if users %}
     {% for user in users %}
-      <div class="col-sm-6 col-md-3">
-          <h1>{{user.title}}</h1>
+      <div class="">
+          <h1 style="font-family: cursive; text-align: center;">{{user.title}}</h1>
+          <p class="title" style="font-family: cursive; text-align: center;">{{user.description}}</p>
           <header>
             <div class="header" >
        
                 <img src="{{user.image.url}}" width="100%" height="450vh">
-                <p class="title">{{user.description}}</p>
+                
               
                 <div class="bt">
                 <button class="btn btn-outline-success" style="border-radius:25px;"><a href="{{user.link}}" style="color: white;">visite site</a></button>
@@ -38,5 +32,19 @@
     {% endfor %}
   {% endif %}
   </div>
+  <div class="row">
+      {% if users %}
+        <h5>Found {{ users|length }} of searched term {{message}}</h5>
+     {% endif %}
+  
+    </div>
 </div>
+<style>
+    .header{
+      position: relative;
+      width: 100%;
+      height: auto;
+      opacity:0.9;
+    }
+</style>
 {% endblock %}
