--- a/awardapp/templates/index.html
+++ b/awardapp/templates/index.html
@@ -9,12 +9,12 @@
   <div class="header">
     <img src="static/image/images (9).jpeg" id="im">
     <div class="text">
-      <p>Site of the day on October 24,2019 </p>
+      <p  style="font-family: cursive; text-align: center;">Site of the day on October 24,2019 </p>
      
     </div>
     <h1 id="aw">Award Application</h1>
     <div class="bt">
-        <button class="btn btn-success" style="border-radius:25px;">visite site</button>
+        <button class="btn btn-success" style="border-radius:25px;"><a href="{% url 'homePage' %}">visite site</a></button>
         <button class="btn btn-outline-primary" style="border-radius:25px;">collect</button>
     </div>
     
@@ -23,7 +23,7 @@
   </div>
 </header>
 <br>
-<p><strong>Sites of the day</strong> Previous Winners</p>
+<p style="font-family: sans-serif;"><strong>Sites of the day</strong> Previous Winners</p>
 <br>
 
   <div class="container">
@@ -77,7 +77,7 @@
   <hr>
   <div class="container">
   
-      <div class="footer text-center">
+      <div class="footer text-center font-small unique-color-dark pt-4">
  
 
   
