--- a/awardapp/templates/profilemy.html
+++ b/awardapp/templates/profilemy.html
@@ -17,6 +17,7 @@
   
   <p class="text-secondary ml-4">Email:{{user.email}}</p>
   <p class="text-secondary ml-4">Bio:{{user.profile.bio}}</p>
+  <p class="text-secondary ml-4">Contact:{{user.profile.contact}}</p>
   </div>
 </div>
 </div>
