--- a/awardapp/templates/navbar.html
+++ b/awardapp/templates/navbar.html
@@ -32,7 +32,7 @@
      
     </div>
     </div>
-    <h2 class="head" style="font-family:'Grand Hotel',cursive; color: black;font-size:30px;text-align: center;">Award</h2>
+    <h2 class="head" style="font-family:'Grand Hotel',cursive; color: black;font-size:30px;text-align: center;"><a href="{% url 'homePage'%}"></a>Award</h2>
    
 
 <!-- 
